# codecollection-registry

./: .devcontainer.Dockerfile  .devcontainer.json  .gitignore  404.html  Agents.md  CNAME  Dockerfile  README.md  VERSION  codecollection_registry.yaml  codecollections.yaml  entrypoint.sh  generate_index.py  generate_registry.py  index.html  map-tag-icons.yaml  package-lock.json  rebuild.sh  requirements.txt  screenshot-capture.js  sitemap.xml  tags.json  test-chat-debug.sh
cc-catalog-svc/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cc-catalog-svc/app/: __init__.py  auth_dockerconfigjson.py  config.py  db.py  main.py  models.py  scheduler.py  security.py
cc-catalog-svc/app/destinations/: __init__.py  base.py  jfrog.py  registry.py
cc-catalog-svc/app/git_http/: __init__.py  server.py
cc-catalog-svc/app/routers/: __init__.py  admin.py  catalog.py  git.py  health.py  mirror.py
cc-catalog-svc/config-examples/: config.airgap.yaml  config.bake.yaml  config.example.yaml  config.jfrog-remote-dockerconfigjson.yaml  config.jfrog-remote.yaml
cc-catalog-svc/docs/: ARCHITECTURE.md  GIT_MIRROR.md  JFROG.md  PAPI_INTEGRATION.md
cc-catalog-svc/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.example.yaml
cc-catalog-svc/scripts/: bake_git_mirrors.py
cc-catalog-svc/tests/: conftest.py  test_auth.py  test_bake_git_mirrors.py  test_catalog_poll_and_api.py  test_destinations_jfrog.py  test_git_http.py  test_git_mirror.py  test_mirror_engine.py  test_sources_oci.py  test_sources_static_and_upstream.py
(+1105 files in other folders)
