[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-catalog-svc"
version = "0.1.0"
description = "Self-contained CodeCollection image catalog + mirror microservice (PAPI-compatible)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "RunWhen", email = "engineering@runwhen.com" },
]
license = { text = "Apache-2.0" }

# Pinned reasonably; this service is intentionally small so we keep the
# dependency surface tight. No Celery, no Redis, no AI deps.
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "httpx>=0.27,<0.30",
    "pyyaml>=6.0,<7",
    # Optional Postgres support: import is lazy in db.py
    "psycopg2-binary>=2.9; extra == 'postgres'",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24",
]

[project.scripts]
cc-catalog-svc = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.black]
line-length = 100
target-version = ["py311"]
